[package]
name = "rustyroblox"
version = "0.3.0"
edition = "2021"
description = "A Rust API wrapper for the Roblox API"
authors = ["piano1029"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
strum = "0.24"
strum_macros = "0.24"
async-recursion = "1.0.0"
