[package]
name = "rustyroblox"
version = "0.5.1"
edition = "2021"
description = "A Rust API wrapper for the Roblox API"
authors = ["piano1029"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25"
strum_macros = "0.25.3"
async-recursion = "1.0.5"
rspc = { version = "0.1.3" }
